fix jumping content

--- a/src/pages/DashboardPage/DashboardPage.module.scss
+++ b/src/pages/DashboardPage/DashboardPage.module.scss
@@ -61,9 +61,11 @@
 
   @include mixins.mq('mobile') {
     width: 360px;
+    height: 250px;
   }
 
   @include mixins.mq('tablet') {
     width: 440px;
+    height: 306px
   }
 }
